--- a/content/notes/2023-07-27.md
+++ b/content/notes/2023-07-27.md
@@ -22,6 +22,11 @@ Ones I didn't know about:
 https://beta.openai.com/playground/p/default-vr-fitness
 https://platform.openai.com/playground/p/default-spreadsheet-gen
 
+From this [YC comment](https://news.ycombinator.com/item?id=34374154):
+https://beta.openai.com/playground/p/default-chat?model=text-davinci-003
+https://beta.openai.com/playground/p/default-friend-chat?model=text-davinci-003
+https://beta.openai.com/playground/p/default-marv-sarcastic-chat?model=text-davinci-003
+
 Ones people have shared that I pulled off of the first page of Google and haven't checked myself yet:
 https://beta.openai.com/playground/p/Aw889I2krC4mdmwcPhgZhjgC?model=text-davinci-002
 https://beta.openai.com/playground/p/JuRZ4Cn6MG3FLmyEf96C0Zp3
@@ -29,3 +34,5 @@ https://beta.openai.com/playground/p/JuRZ4Cn6MG3FLmyEf96C0Zp3
 I could use Bing Chat to generate this list myself.
 Prompt: "Please generate a list of 20 popular URLs that you find on the internet that begin with https://beta.openai.com/playground/p/" and see if there exist 20 old default ones (when it was called beta)
 Prompt: Please generate a list of 100 popular URLs that you find on the internet that begin with https://platform.openai.com/playground/p/" and get a bunch that people have shared publicly
+
+#todo I still want to write that launchd (or just a crontab if that'll be faster) that will commit and push every day to save update my blog
