add daily notes 2023-07-30

--- a/content/notes/2023-07-29.md
+++ b/content/notes/2023-07-29.md
@@ -16,3 +16,9 @@ Here's the link: [THKAILAR USB C Flash Drive 256GB](https://www.amazon.com/gp/pr
 But wait, there's more! They also have a 512GB version at a discounted price of just $34.68! That's 5% off the regular price of $36.50.
 
 Don't miss out on these fantastic deals! Get the storage you need for your Android phone, PC, Mac, or Pro at a bargain price. Happy shopping! 🛍️
+
+---
+
+other gifts you might like:
+[Holder](https://www.amazon.com/dp/B0BQRJ6Y5P?_encoding=UTF8&linkCode=r02&tag=smolk-20)
+[Condenser Mic and Studio Headphones](https://www.amazon.com/dp/B07VYJ4TV2?_encoding=UTF8&linkCode=r02&tag=smolk-20&linkId=amzn1.deals-promotions.ATVPDKIKX0DER.b7ab1b34_1690704429186&ref_=ihub_rc_td_c_deals-promotions_b7ab1b34)
