--- a/content/notes/2023-07-30.md
+++ b/content/notes/2023-07-30.md
@@ -5,3 +5,5 @@ tags:
 ---
 
 oof, when going through the pages I hadn't seen yet, I just noticed that he [Zhao, the guy who created Quartz] published his Operand API key and index ID publicly in [[search]]. I redacted it from my page for his privacy (although I didn't bother combing through my history to remove it), so it is technically still available.
+
+So Jacky Zhao works at R&D at Replit, and, based on [his website](https://jzhao.xyz) -> and [how he said](https://jzhao.xyz/thoughts/academia) he talked to [Stephen Fay](https://stephenfay.xyz/), I surmise that he went to McGill.
