Update empty file titles

--- a/content/notes/2023-07-29.md
+++ b/content/notes/2023-07-29.md
@@ -1,5 +1,6 @@
 ---
-title: "2023-07-29"
+title: "Amazon Finds: Picks and Shopping Essentials"
+slug: "amazon-personalized-deals-july-2023"
 tags:
 - blog
 categories:
