add daily notes 2023-07-30

--- a/content/notes/2023-07-29.md
+++ b/content/notes/2023-07-29.md
@@ -1,10 +1,12 @@
 ---
 title: "Amazon Finds: Picks and Shopping Essentials"
 slug: "amazon-personalized-deals-july-2023"
+author: Nadia S
 tags:
-- blog
+  - blog
 categories:
-- amazon
+  - amazon
+featured_image: "notes/images/amazon-logo.png"
 ---
 {{< category-disclaimer >}}
 
