Attempting to fix the disclaimer

--- a/content/notes/2023-07-29.md
+++ b/content/notes/2023-07-29.md
@@ -8,7 +8,7 @@ categories:
   - amazon
 featured_image: "notes/images/amazon-logo.png"
 ---
-{{< category-disclaimer >}}
+{{{< category-disclaimer >}}}
 
 https://www.amazon.com/gp/product/B081DFZRPX/?tag=smolk-20
 
@@ -39,7 +39,7 @@ other gifts you might like:
 
 At 10 bucks ~~a pop~~ for 6 (i.e. 1.70 per pad), I think these [memo pads](https://www.amazon.com/Softcover-Pocket-Notebook-Set-millimeters/dp/B07DGTN1HJ?crid=24IXZZICGNLVE&keywords=memo+pad&qid=1690707356&sprefix=memo+pad%2Caps%2C149&sr=8-24&linkCode=ll1&tag=smolk-20&linkId=01d0b0b93972c0dde4efeafef1d8f326&language=en_US&ref_=as_li_ss_tl) might be worth it
 
-And these, well, [these are definitely worth it if you use them](https://amzn.to/47b6H95). But they fray on the bottom and the spiral can get out of wack in your pants when you sit down. So you always have to take these kinds of memo pads out of your pocket when sitting down. Still, worth [a look](https://www.amazon.com/College-Better-Office-Products-Assorted/dp/B07V3TRD65?&linkCode=ll1&tag=smolk-20)
+And these, well, [these are definitely worth it if you use them](https://amzn.to/47b6H95). But they fray on the bottom and the spiral can get out of wack in your pants when you sit down. So you always have to take these kinds of memo pads out of your pocket when sitting down. Still, worth [a look](https://www.amazon.com/College-Better-Office-Products-Assorted/dp/B07V3TRD65?&linkCode=ll1&tag=smolk-20).
 
 Here's a [slightly more expensive one than the generic ones above](https://www.amazon.com/gp/product/B072MFZ2WV?smid=A3G2RBEZBLAJ53&psc=1&linkCode=ll1&tag=smolk-20&linkId=58b97f85ac759384b0d8479dfa701bb4&language=en_US&ref_=as_li_ss_tl), but Amazon advertises them well (or, more likely, Staples pays Amazon extra in order to advertise them like this), so maybe it's worth it:
 ![[notes/images/Staples Memo Pad screenshot.png]]
