Attempting to fix the disclaimer

--- a/content/notes/2023-07-29.md
+++ b/content/notes/2023-07-29.md
@@ -8,6 +8,12 @@ categories:
   - amazon
 featured_image: "notes/images/amazon-logo.png"
 ---
+
+{{ with .Page.Params.category }}
+{{ . }}  
+{{ end }}
+
+
 {{{ category-disclaimer }}}
 
 https://www.amazon.com/gp/product/B081DFZRPX/?tag=smolk-20
