Attempting to fix the disclaimer

--- a/content/notes/2023-07-29.md
+++ b/content/notes/2023-07-29.md
@@ -14,7 +14,7 @@ featured_image: "notes/images/amazon-logo.png"
 {{ end }}
 
 
-{{{ category-disclaimer }}}
+{{< category-disclaimer >}}
 
 https://www.amazon.com/gp/product/B081DFZRPX/?tag=smolk-20
 
