--- a/content/notes/2023-07-30.md
+++ b/content/notes/2023-07-30.md
@@ -7,3 +7,13 @@ tags:
 oof, when going through the pages I hadn't seen yet, I just noticed that he [Zhao, the guy who created Quartz] published his Operand API key and index ID publicly in [[search]]. I redacted it from my page for his privacy (although I didn't bother combing through my history to remove it), so it is technically still available.
 
 So Jacky Zhao works at R&D at Replit, and, based on [his website](https://jzhao.xyz) -> and [how he said](https://jzhao.xyz/thoughts/academia) he talked to [Stephen Fay](https://stephenfay.xyz/), I surmise that he went to McGill.
+
+---
+
+5:30 p.m.
+Great, so, today, I learned how to use Hugo's layouts. But, now, I'm older. I'm no longer learning "everything," getting overwhelmed, and giving up. I'm just learning what I need.
+How to add YouTube videos with ShortCodes: {{< youtube 2xkNJL4gJ9E >}}
+
+Copilot suggested these:
+How to add images with ShortCodes: {{< figure src="https://i.imgur.com/1zjX1uB.png" >}}
+How to add a link with ShortCodes: {{< link href="https://www.youtube.com/watch?v=6IwuyjVcXhE" >}}Watch this video{{< /link >}}
