Attempting to fix the disclaimer

--- a/content/notes/2023-07-30.md
+++ b/content/notes/2023-07-30.md
@@ -16,4 +16,4 @@ How to add YouTube videos with ShortCodes: {{< youtube 2xkNJL4gJ9E >}}
 
 Copilot suggested these:
 How to add images with ShortCodes: {{< figure src="https://i.imgur.com/1zjX1uB.png" >}}
-How to add a link with ShortCodes: {{< link href="https://www.youtube.com/watch?v=6IwuyjVcXhE" >}}Watch this video{{< /link >}}
+It also tried to use a "link" shortcode, but this doesn't exist
