add daily notes 2023-08-01

--- a/content/notes/2023-07-26.md
+++ b/content/notes/2023-07-26.md
@@ -6,7 +6,9 @@ tags:
 
 ### aws file transcription
 
-TL;DR: Still not finished. This tells you how to take an audio file, upload it to AWS (assuming you've already created a bucket, either with something like `aws s3 mb recordings` or manually via the website), create a user account (they call it an "IAM User") with the necessary permissions, transcribe the file, and then manually submit a batch job to translate it. Translating via terminal/programmatically is a headache that I still haven't figured out. It involves temporary permissions (they call them "IAM Roles"), instead of just giving the user account permission. That's all that's remaining for this to be a complete tutorial to automate permissions.
+TL;DR: Still not finished. This tells you how to take an audio file, upload it to AWS (assuming you've already created a bucket[^4]), create a user account (they call it an "IAM User") with the necessary permissions, transcribe the file, and then manually submit a batch job to translate it. Translating via terminal/programmatically is a headache that I still haven't figured out. It involves temporary permissions (they call them "IAM Roles"), instead of just giving the user account permission. That's all that's remaining for this to be a complete tutorial to automate permissions.
+
+[^4]: either with something like `aws s3 mb recordings` or manually via the website
 
 Bonus! I also included a [[2023-07-26 GPT prompt]]
 
